[package]
name = "csv-diff-splitter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap  = {version = "3.2.16",  features = [ "derive" ]}
serde = "1.0.144"
serde_json = "1.0.85"
csv = "1.1.6"
pretty_env_logger = "0.4.0"
env_logger = "0.9.0"
stopwatch = "0.0.7"
tokio = { version = "1", features = ["full"] }
clap-verbosity-flag = "1.0.1"
log = "0.4.17"